Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17030

MS Visual Studio 2010 command prompt spams syntax errors upon startup

    XMLWordPrintable

Details

    Description

      0.4.14-RC-8-g1734c56_syntaxErrors.png
      0.4.14-RC-8-g1734c56_syntaxErrors.log

      The log contains the full setup of MS Visual Studio 2010 as well.

      I used MS Visual Studio 2010 Ultimate Russian here.

      Rebooting the machine does not help to workaround those syntax errors.

      For the record: Before starting the Vs2010 cmd prompt, I had installed RosBE2.1.6 as well, not sure, whether this is necessary to see this bug or not. Default assumption is, that it would happen also without that step.

      Attachments

        1. 0.4.14-RC-8-g1734c56_syntaxErrors.png
          42 kB
          reactosfanboy
        2. vcvars32-hacked.bat
          4 kB
          Katayama Hirofumi MZ
        3. vcvars32-hacked.png
          28 kB
          Katayama Hirofumi MZ
        4. rem-hyphens.png
          24 kB
          Katayama Hirofumi MZ
        5. rem-repeat.png
          34 kB
          Katayama Hirofumi MZ
        6. 0.4.14-RC-8-g1734c56_syntaxErrors.log
          2.42 MB
          reactosfanboy
        7. 0.4.15-dev-203-g711f631_fixed.webm
          206 kB
          reactosfanboy

        Issue Links

          Activity

            People

              hbelusca hbelusca
              reactosfanboy reactosfanboy
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: