[0.4.7][CMD] Quick fix for the REM command parser. CORE-17030

This avoids spamming "Syntax Errors" to the cmd-prompt when starting the VS2010 command prompt.
Or when typing something like "@Rem Hello" at the prompt.

Fix picked from 0.4.15-dev-202-g 9c11be5a3a95a35604f73062719431cf6df1ffb6